# python-project-lvl4

./: .coverage  .coveragerc  .flake8  .gitignore  Makefile  README.md  coverage.xml  manage.py  pyproject.toml  pytest.ini  requirements.txt  translate
.github/workflows/: github_action.yaml
labels/: forms.py  models.py  tables.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_auto_20211119_1903.py  0003_auto_20211130_1407.py
labels/templates/labels/: labels.html
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_auto_20211119_1903.py  0003_auto_20211130_1407.py
statuses/templates/statuses/: statuses.html
task_manager/: asgi.py  settings.py  urls.py  user_messages.py  utils.py  views.py  wsgi.py
task_manager/templates/: base.html  home.html
tasks/: filters.py  forms.py  models.py  tables.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20211119_1903.py  0004_alter_task_description.py  0005_auto_20211202_1320.py
tests/: test_labels.py  test_login.py  test_statuses.py  test_tasks.py  test_users.py  tests_labels.py  tests_tasks.py
users/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_full_name.py  0002_rename_executor_id_task_executor.py  0003_alter_task_tag.py  0004_auto_20211104_1013.py  0005_rename_tag_label.py  0006_auto_20211105_0937.py  0007_auto_20211105_0950.py  0008_alter_task_label.py
(+15 files in other folders)
