[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Serggi0 <serve4mia@gmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
Django = "^3.2.7"
gunicorn = "^20.1.0"
heroku = "^0.1.4"
django-bootstrap4 = "^3.0.1"
django-tables2 = "^2.4.1"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
